load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["resource.pb.go"],
    importpath = "github.com/census-instrumentation/opencensus-proto/gen-go/resource/v1",
    visibility = ["//visibility:public"],
    deps = ["@com_github_golang_protobuf//proto:go_default_library"],
)
