load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "trace.pb.go",
        "trace_config.pb.go",
    ],
    importpath = "github.com/census-instrumentation/opencensus-proto/gen-go/trace/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//gen-go/resource/v1:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
    ],
)
