load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "trace_service.pb.go",
        "trace_service.pb.gw.go",
    ],
    importpath = "github.com/census-instrumentation/opencensus-proto/gen-go/agent/trace/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//gen-go/agent/common/v1:go_default_library",
        "//gen-go/resource/v1:go_default_library",
        "//gen-go/trace/v1:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//utilities:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//grpclog:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
